trunk/Archive2/6f/15311749f12a66/output
main.cpp: In instantiation of 'triElement<Type>::triElement(std::initializer_list<_Tp>) [with Type = int]':
main.cpp:80:31:   required from here
main.cpp:37:27: error: no matching function for call to 'std::array<int, 3ul>::array(std::initializer_list<int>&)'
                 data_(list)
                           ^
main.cpp:37:27: note: candidates are:
In file included from main.cpp:1:0:
/usr/local/include/c++/4.9.0/array:81:12: note: std::array<int, 3ul>::array()
     struct array
            ^
/usr/local/include/c++/4.9.0/array:81:12: note:   candidate expects 0 arguments, 1 provided
/usr/local/include/c++/4.9.0/array:81:12: note: constexpr std::array<int, 3ul>::array(const std::array<int, 3ul>&)
/usr/local/include/c++/4.9.0/array:81:12: note:   no known conversion for argument 1 from 'std::initializer_list<int>' to 'const std::array<int, 3ul>&'
/usr/local/include/c++/4.9.0/array:81:12: note: constexpr std::array<int, 3ul>::array(std::array<int, 3ul>&&)
/usr/local/include/c++/4.9.0/array:81:12: note:   no known conversion for argument 1 from 'std::initializer_list<int>' to 'std::array<int, 3ul>&&'
